2002-09-17  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/gnd_exp.c :
	* exp/gnd_exp.h :

	  - Renamed get_superset to group.

	  - Added a function that checks whether a given expression is true,
	    false or unknown in a given expression.

	* exp/expression.h :

	  - Added res_type (true, false unknown).

	* ident/identlist.c :
	* ident/indetlist.h :

	  - Added length function.

	* exp/gnd_exp.c :

	  - Added a get_superset function to get a list of identifiers that
	    are supergroups of a given identifier.

2002-09-14  Vino Crescini  <jcrescin@cit.uws.edu.au>


	* exp/comp_exp.c :
	* exp/comp_exp.h :

	  - Added a replace function that takes a non-ground expression,
	    a list of variables and a list of replacement identifiers and
	    gives a ground expression where the variables are replaced
	    with the corresponding identifier.

2002-09-11  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :
	* datastruct/simplelist.h :
	* datastruct/stringlist.c :
	* datastruct/stringlist.h :

	  - Added an index function that returns the index of the first
	    node that matches the given data.

2002-09-08  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/expression.h :

	  - Some definitions/macros common between ground and non-ground
	    atoms/expressions.

	* exp/atom.c :
	* exp/atom.h :
	* exp/expression.c :
	* exp/expression.h :
	* exp/gnd_atom.h :
	* exp/gnd_exp.h :
	* exp/comp_atom.h :
	* exp/comp_exp.h :

	  - Separated the atom and expression files into ground and comp
	    non-ground groupings. Very few differences between the two,
	    but separating them ensures integrity, and this will make it
	    easier to evaluate policy propositions.

	* ident/ident.h :

	  - Added string macro.

	* exp/Makefile :
	* parser/parser.y :
	* parser/scanner.l :
	* trans/transdef.c :
	* trans/transdef.h :

	  - Changed to use gnd/comp exp/atom.

2002-09-07  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* parser/parser.y :
	* parser/scanner.l :
